--- a/main.html
+++ b/main.html
@@ -7,6 +7,49 @@
 </head>
 
 <body>
+	<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Favorite Holiday Destination</title>
+</head>
+<body>
+
+  <h1>Bali, Indonesia</h1>
+
+  <br>
+
+  <p>
+    Bali, often referred to as the "Island of the Gods," is a beautiful Indonesian paradise known for its stunning beaches, lush landscapes, and rich culture. With its vibrant traditions and welcoming atmosphere, Bali is a top destination for both relaxation and adventure.
+  </p>
+
+  <h2>Top 5 Attractions in Bali</h2>
+  <ol>
+    <li><strong>Uluwatu Temple</strong> – A majestic sea temple perched on a cliff with stunning ocean views.</li>
+    <li><em>Sacred Monkey Forest Sanctuary</em> – A lush forest filled with playful monkeys and ancient temple ruins.</li>
+    <li><strong><em>Mount Batur</em></strong> – A popular destination for sunrise treks, offering breathtaking views from the summit.</li>
+    <li><strong>Seminyak Beach</strong> – A beautiful beach perfect for swimming, surfing, and watching spectacular sunsets.</li>
+    <li><em>Rice Terraces in Tegallalang</em> – Famous for its lush green terraces and tranquil surroundings, perfect for a peaceful walk.</li>
+  </ol>
+
+  <h2>Must-Try Foods in Bali</h2>
+  <ul>
+    <li><strong>Nasi Goreng</strong> – A flavorful fried rice dish often served with a fried egg on top.</li>
+    <li><em>Babi Guling</em> – A Balinese-style roasted pork that is a must-try during special occasions.</li>
+    <li><strong>Sate Lilit</strong> – Minced meat skewers wrapped in coconut leaves and grilled to perfection.</li>
+    <li><em>Ayam Betutu</em> – Slow-cooked chicken infused with Balinese spices, often served with rice.</li>
+    <li><strong><em>Lawar</em></strong> – A traditional Balinese salad made with vegetables, coconut, and a mix of meats or tofu.</li>
+  </ul>
+
+</body>
+</html>
+Explanation:
+The <h1> tag gives the main heading with the name of the destination.
+<br> adds a line break between the heading and the paragraph.
+The <p> tag provides a brief overview of the destination.
+The <ol> (ordered list) highlights the top 5 attractions, with some emphasized text using <strong> and <em> tags.
+The <ul> (unordered list) lists the must-try foods, with bold and italicized text for emphasis as required.
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
